switched from vh to px to avoid layout shifting

--- a/src/output.css
+++ b/src/output.css
@@ -616,6 +616,14 @@ video {
   z-index: 50;
 }
 
+.z-\[99\] {
+  z-index: 99;
+}
+
+.-z-20 {
+  z-index: -20;
+}
+
 .mx-20 {
   margin-left: 5rem;
   margin-right: 5rem;
@@ -644,6 +652,22 @@ video {
   margin-top: 2rem;
 }
 
+.mb-\[4em\] {
+  margin-bottom: 4em;
+}
+
+.mb-\[8em\] {
+  margin-bottom: 8em;
+}
+
+.mt-\[8em\] {
+  margin-top: 8em;
+}
+
+.mt-\[10em\] {
+  margin-top: 10em;
+}
+
 .block {
   display: block;
 }
@@ -668,8 +692,24 @@ video {
   height: 15em;
 }
 
+.h-\[800px\] {
+  height: 800px;
+}
+
+.h-\[700px\] {
+  height: 700px;
+}
+
 .min-h-\[100vh\] {
   min-height: 100vh;
+}
+
+.min-h-\[800px\] {
+  min-height: 800px;
+}
+
+.min-h-\[80vh\] {
+  min-height: 80vh;
 }
 
 .w-\[100vw\] {
@@ -758,6 +798,14 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-clip {
+  overflow: clip;
+}
+
+.overflow-visible {
+  overflow: visible;
 }
 
 .overflow-x-hidden {
@@ -890,6 +938,10 @@ video {
   padding-top: 4em;
 }
 
+.pb-\[4em\] {
+  padding-bottom: 4em;
+}
+
 .text-center {
   text-align: center;
 }
@@ -920,6 +972,11 @@ video {
 
 .text-xl {
   font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
@@ -1034,6 +1091,10 @@ video {
     top: 7em;
   }
 
+  .lg\:z-10 {
+    z-index: 10;
+  }
+
   .lg\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
@@ -1064,6 +1125,14 @@ video {
     display: none;
   }
 
+  .lg\:h-\[500px\] {
+    height: 500px;
+  }
+
+  .lg\:min-h-0 {
+    min-height: 0px;
+  }
+
   .lg\:scale-\[0\.95\] {
     --tw-scale-x: 0.95;
     --tw-scale-y: 0.95;
@@ -1073,6 +1142,12 @@ video {
   .lg\:scale-\[1\.1\] {
     --tw-scale-x: 1.1;
     --tw-scale-y: 1.1;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .lg\:scale-\[1\] {
+    --tw-scale-x: 1;
+    --tw-scale-y: 1;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
@@ -1100,6 +1175,10 @@ video {
     gap: 1rem;
   }
 
+  .lg\:overflow-hidden {
+    overflow: hidden;
+  }
+
   .lg\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
@@ -1115,6 +1194,11 @@ video {
 
   .lg\:text-center {
     text-align: center;
+  }
+
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 }
 
@@ -1133,6 +1217,14 @@ video {
 
   .xl\:top-\[0em\] {
     top: 0em;
+  }
+
+  .xl\:right-\[-7em\] {
+    right: -7em;
+  }
+
+  .xl\:right-\[-6em\] {
+    right: -6em;
   }
 
   .xl\:mx-0 {
@@ -1165,8 +1257,24 @@ video {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
+  .xl\:scale-\[1\] {
+    --tw-scale-x: 1;
+    --tw-scale-y: 1;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .xl\:scale-\[1\.1\] {
+    --tw-scale-x: 1.1;
+    --tw-scale-y: 1.1;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
   .xl\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .xl\:overflow-visible {
+    overflow: visible;
   }
 
   .xl\:text-balance {
